[metadata]
name = clerk_importer
version = attr: setuptools_scm.get_version
description = Automate beancount entries from plaid data.
long_description = file: README.rst
url = https://github.com/allancalix/clerk-importer
author = Allan Calix
keywords = fava beancount accounting plaid
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    beancount>=2.0.0

[options.packages.find]
exclude =
    tests
